[package]
name = "rs-whep-play"
version = "0.1.0"
edition = "2021"
authors = ["Michel Promonet <michel.promonet@free.fr>"]
license = "The Unlicense"
keywords = ["webrtc", "whep", "gstreamer"]

[dependencies]
webrtc = "0.9.0"
tokio = "1.33.0"
anyhow = "1.0.75"
reqwest = "0.11.20"
gstreamer = "0.21.1"
gstreamer-app = "0.21.1"
log = "0.4.20"
env_logger = "0.10.0"
