[package]
name = "rs-whep-play"
version = "0.1.0"
edition = "2021"
authors = ["Michel Promonet <michel.promonet@free.fr>"]
license = "The Unlicense"
keywords = ["webrtc", "whep", "gstreamer"]

[dependencies]
webrtc = "0.9"
tokio = "1.33"
anyhow = "1.0"
reqwest = "0.11"
gstreamer = "0.21"
gstreamer-app = "0.21"
log = "0.4"
env_logger = "0.11"
